# micrograd

./: CMakeLists.txt  Dockerfile  README.md
src/: block.h  main.cpp  nn.h  visualizer.cpp  visualizer.h
